src/assets/styles/views/_HomePage.scss
main {
    font-family: Nunito, Courier, monospace;
    padding: 0 10px;

    .intro {
        max-height: 80vh;
        display: grid;
        grid-template-columns: 0.7fr 0.5fr;
        grid-template-rows: 1fr 0.5fr;
        gap: 12px;
        margin-bottom: 3em;

        .pos0 {
            // background-color: $black;
            grid-area: 1 / 1 / 2 / 2;
        }

        .pos1 {
            // background-color: $black;
            grid-area: 1 / 2 / 2 / 3;
        }

        .pos2 {
            // background-color: lightblue;
            grid-area: 2 / 1 / 3 / 2;
        }

        .pos3 {
            // background-color: $white;
            grid-area: 2 / 2 / 3 / 3;
        }
    }
}

.box {
    border-radius: 15px;
    min-height: max-content;
    position: relative;
    overflow: hidden;
    border-radius: 20px;

    .image-container {
        position: relative;
        z-index: 0;
        overflow: hidden;
        object-fit: contain;
        max-width: auto;

        img {
            width: 100%;
            /* make sure the image takes the full width of its container */
            height: 100%;
            /* make sure the image takes the full height of its container */
            object-fit: cover;
            /* this makes sure your image covers the entire element without being stretched */
        }
    }

    .data-box {
        grid-row-start: 1;
        grid-column-start: 1;
        position: absolute;
        top: 0;
        left: 0;
        z-index: 1;
        overflow: hidden;
        pointer-events: none;
        height: 100%;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: space-around;
        padding: 5px 20px;
        width: 100%;

        p {
            margin: 0;
            pointer-events: none;
        }

        button {
            transform: translateX(-150%);
            transition: transform 0.3s ease, background-color .2s ease, opacity .2s ease;
            opacity: 0.9;
            pointer-events: auto;
            position: relative;
            z-index: 2;
            @include btn;
        }

        &:hover button {
            transform: translateX($home-btn);
            opacity: 1;
        }
    }

    >*:not(.data-box) {
        filter: blur(0px);
        transition: filter 0.27s cubic-bezier(0.075, 0.82, 0.165, 1);

        &:hover {
            filter: blur($home-blur);

            &~.data-box button {
                transform: translateX($home-btn);
            }
        }
    }
}

// display modes
.box.dark-mode {

    button {
        @include btn($dark-blue);
        color: $white;
        border: 1px solid $blue !important;
    }

    color: $white;
}

.box.light-mode {
    .box {
        background-color: $black;

    }

    button {
        @include btn($white);
        border: 1px solid $blue !important;
    }
}

